# kubera

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  NAMESPACE_FILTERING.md  README.md  gateway-api-features.md  justfile
api/: Cargo.toml
api/src/: constants.rs  lib.rs  v1alpha1.rs
benches/: core_benchmarks.rs
cli/: Cargo.toml
cli/src/: cli.rs  kube.rs  main.rs  models.rs  table_theme.rs
cli/src/commands/: analyze.rs  context.rs  describe.rs  exec.rs  get.rs  logs.rs  mod.rs  port_forward.rs  status.rs
control_plane/: Cargo.toml  Dockerfile
control_plane/src/: cli.rs  health.rs  instrumentation.rs  main.rs  options.rs
control_plane/src/controllers/: instances.rs  mod.rs
control_plane/src/controllers/filters/: gateway_api_converter.rs  gateway_classes.rs  gateway_parameters.rs  gateways.rs  http_routes.rs  mod.rs
control_plane/src/controllers/macros/: sync_objects.rs  watch_objects.rs
control_plane/src/controllers/sync/: access_control_filter_status.rs  gateway_class_status.rs  gateway_configmaps.rs  gateway_deployments.rs  gateway_services.rs  gateway_status.rs  http_route_status.rs  mod.rs  static_response_filter_status.rs
control_plane/src/controllers/transformers/: gateway_extension_filters.rs  gateway_instances.rs  http_routes.rs  mod.rs  services.rs  static_responses_cache.rs
control_plane/src/ipc/: events.rs  gateways.rs  mod.rs
control_plane/src/ipc/endpoints/: get_gateway_configuration.rs  get_gateway_events.rs  get_static_response.rs  liveness_check.rs  mod.rs
control_plane/src/kubernetes/: mod.rs  objects.rs
controller/: Cargo.toml  Dockerfile  build.rs
controller/src/: controllers.rs  main.rs  sync.rs
controller/src/api/: mod.rs  v1alpha1.rs
controller/src/controllers/: gateway.rs  gateway_class.rs  gateway_class_parameters.rs  mod.rs  state.rs
controlplane/: Cargo.toml  Dockerfile
controlplane/src/: cli.rs  constants.rs  main.rs  objects.rs
controlplane/src/api/: constants.rs  mod.rs  v1alpha1.rs
controlplane/src/control_service/: gateway_configuration_events.rs  mod.rs
controlplane/src/control_service/endpoints/: gateway_event_stream.rs  mod.rs
controlplane/src/controllers/: computed_state.rs  current_pod.rs  deployments.rs  desired_resources_controller.rs  gateway.rs  gateway_class.rs  gateway_class_parameters.rs  gateway_parameters.rs  gateways.rs  instances.rs  kubernetes_object_controller.rs  mod.rs  object_controller.rs  objects.rs  resources.rs  resulting_resources_controller.rs  role.rs  services.rs  source_controller.rs
controlplane/src/controllers/desired_resources/: controller.rs  mod.rs
controlplane/src/controllers/filters/: config_maps.rs  gateway_classes.rs  gateways.rs  http_routes.rs  mod.rs
controlplane/src/controllers/macros/: mod.rs  sync_objects.rs  watch_objects.rs
controlplane/src/controllers/sources/: computed_state.rs  config_maps.rs  controller.rs  deployments.rs  gateway_class.rs  gateway_class_parameters.rs  gateway_parameters.rs  gateways.rs  mod.rs  services.rs
controlplane/src/controllers/sync/: gateway_configmaps.rs  gateway_deployments.rs  gateway_services.rs  mod.rs
controlplane/src/controllers/transformers/: gateway_config.rs  gateway_configs.rs  gateway_instances.rs  gateway_services.rs  http_routes.rs  mod.rs  services.rs
controlplane/src/ipc/: events.rs  gateway_events.rs  gateways.rs  mod.rs
controlplane/src/ipc/endpoints/: get_gateway_configuration.rs  get_gateway_events.rs  mod.rs
controlplane/src/sync/: state.rs
controlplane/templates/: gateway_deployment.kubernetes-helm-yaml  gateway_service.kubernetes-helm-yaml
core/: Cargo.toml  build.rs  config-schema.yaml
core/proptest-regressions/: lib.txt
core/src/: config.rs  crypto.rs  instrumentation.rs  lib.rs  net.rs  schemars.rs  utils.rs
core/src/config/: logging.rs  mod.rs  serde.rs  types.rs
core/src/config/gateway/: listener.rs  mod.rs  serde.rs  types.rs
core/src/gateways/: mod.rs
core/src/gateways/tests/: config1.yaml
core/src/http/: listeners.rs  mod.rs
core/src/http/filters/: access_control.rs  client_addrs.rs  error_response.rs  header_modifier.rs  mod.rs  redirect.rs  static_response.rs  uri_rewrite.rs
core/src/http/matches/: headers.rs  host_header.rs  method.rs  mod.rs  path.rs  query_params.rs
core/src/http/routes/: backends.rs  mod.rs  rules.rs
core/src/io/: file_watcher.rs
core/src/ipc/: mod.rs
core/src/sync/: macros.rs  mod.rs  signal.rs
core/src/sync/signal/: instrumentation.rs  mod.rs
core/src/task/: mod.rs
core/src/types/filters/: access_control.rs
core/tests/: kitchen_sink_gateway_configuration.rs
core/tests/cases/: kitchen_sink_configuration.yaml
gateway/: Cargo.toml  Dockerfile  gateway.yaml
gateway/scripts/: vg-gateway-readiness-probe.sh
gateway/src/: cli.rs  instrumentation.rs  main.rs  request_matcher.rs  util.rs
gateway/src/config/: config_watcher_controller.rs  matchers_controller.rs  mod.rs  router_controller.rs  routes_controller.rs  topology.rs
gateway/src/controllers/: events.rs  ipc_events.rs  mod.rs  router.rs  static_response_bodies_cache.rs
gateway/src/controllers/config/: fs.rs  ipc.rs  mod.rs  selector.rs
gateway/src/controllers/testcases/: simple.yaml
gateway/src/http/: extensions.rs  gateway.rs  listener.rs  mod.rs  route_matcher.rs  router.rs
gateway/src/http/filters/: mod.rs
gateway/src/http/gateway/: context.rs  mod.rs
gateway/src/http/proxy/: context.rs  mod.rs
gateway/src/http/router/: mod.rs  route.rs  routes.rs
gateway/src/net/: mod.rs  resolver.rs
gateway/src/net/load_balancing/: discovery.rs  mod.rs
gateway/src/proxy/: constants.rs  context.rs  mod.rs
gateway/src/proxy/filters/: access_control.rs  client_addrs.rs  downstream_request_context_injector.rs  headers.rs  mod.rs  request_context_extractor.rs  request_headers.rs  request_redirect.rs  response_headers.rs  static_responses.rs  url_rewrite.rs
gateway/src/proxy/instrumentation/: mod.rs
gateway/src/proxy/responses/: error_responses.rs
gateway/src/proxy/router/: endpoints.rs  mod.rs  routes.rs  topology.rs
gateway/src/services/: mod.rs
(+121 files in other folders)
