[workspace]
resolver = "3"
members = ["api",
    "build",
    "control_plane",
    "core",
    "gateway",
    "macros"
]

# Enable faster builds
[profile.dev]
incremental = true

[profile.release]
lto = "thin"
codegen-units = 1

[workspace.dependencies]
anyhow = "1"
assertables = "9"
async-trait = "0.1"
axum = "0.8"
bytes = "1"
enumflags2 = "0.7"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
flexi_logger = "0.31"
futures = "0.3"
getset = "0.1"
http = "1"
http-constant = "1"
http-serde = "2"
ipnet = { version = "2", features = ["serde"] }
itertools = "0.14"
k8s-openapi = { version = "0.25.0", features = ["v1_32"] }
kube = { version = "1", features = ["runtime", "derive"] }
lockable = "0.2"
problemdetails = { version = "0.6" }
regex = { version = "1", features = ["perf", "unicode"] }
rstest = "0.26.1"
rustls = { version = "0.23", features = ["ring"] }
schemars = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full", "tracing"] }
tracing = { version = "0.1", features = ["log"] }
typed-builder = "0.21"
unicase = "2"
# Testing dependencies
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
mockall = "0.13"
tempfile = "3.8"
wiremock = "0.6"
test-log = "0.2"
