[workspace]
resolver = "3"
members = [
    "api",
    "build",
    "cli",
    "control_plane",
    "core",
    "gateway",
    "macros"
]

# Enable faster builds
[profile.dev]
incremental = true

[profile.release]
lto = "thin"
codegen-units = 1

[workspace.dependencies]
anyhow = "1"
assertables = "9"
async-trait = "0.1"
atomic_refcell = "0.1.13"
axum = "0.8"
backtrace-on-stack-overflow = "0.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
console-subscriber = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
dashmap = "6"
enumflags2 = "0.7"
eventsource-client = "0.15"
flexi_logger = "0.31"
futures = "0.3"
getset = "0.1"
http = "1"
http-constant = "1"
http-serde = "2"
ipnet = { version = "2", features = ["serde"] }
itertools = "0.14"
k8s-openapi = { version = "0.25.0", features = ["v1_32"] }
kube = { version = "1", features = ["runtime", "derive"] }
kube-conf = "0.2"
lockable = "0.2"
mockall = "0.13"
notify = "8"
once_cell = "1"
opentelemetry = { version = "0.30", features = ["metrics", "logs", "tracing"] }
opentelemetry-semantic-conventions = "0.30"
opentelemetry-appender-tracing = { version = "0.30", features = ["experimental_use_tracing_span_context"] }
problemdetails = { version = "0.6" }
prometheus = "0.14"
proptest = "1"
rand = "0.9"
rand_chacha = "0.9"
regex = { version = "1", features = ["perf", "unicode"] }
reqwest = "0.12"
reqwest-middleware = "0.4"
reqwest-tracing = "0.5"
rstest = "0.26.1"
rustls = { version = "0.23", features = ["ring"] }
schemars = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_valid = { version = "1", features = ["yaml"] }
serde_yaml = "0.9"
strum = { version = "0.27", features = ["derive"] }
tempfile = "3"
test-log = "0.2"
thiserror = "2"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-stream = "0.1"
tokio-test = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trusted-proxies = "0.3"
typed-builder = "0.21"
unicase = "2.8"
url = { version = "2", features = ["serde"] }
wiremock = "0.6"
