[package]
name = "kubera_api"
version = "0.1.0"
edition = "2021"

[dependencies]
gateway-api = "0.16"
ipnet = { workspace = true }
k8s-openapi = { workspace = true, features = ["v1_32"] }
kube = { workspace = true }
schemars = { version = "0.8" }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
typed-builder = { workspace = true }

[lib]
name = "kubera_api"
path = "src/lib.rs"
