[package]
name = "kubera_control_plane"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
backtrace-on-stack-overflow = "0.3"
clap = { workspace = true }
dashmap = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
gateway-api = "0.16"
getset = { workspace = true }
gtmpl = { version = "0.7", features = ["gtmpl_dynamic_template"] }
gtmpl_derive = "0.5"
gtmpl_value = "0.5"
itertools = { workspace = true }
k8s-openapi = { workspace = true, features = ["v1_32"] }
kube = { workspace = true }
kubera_api = { path = "../api" }
kubera_core = { path = "../core" }
problemdetails = { version = "0.6", features = ["axum"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sprig = "0.3"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["full"] }
tracing = { workspace = true }
rustls = { workspace = true }
kube-leader-election = { git = "https://github.com/daniel-white/kube-leader-election.git", branch = "feat/change-result-type" }
strum = { workspace = true }

[[bin]]
name = "kubera_control_plane"
path = "src/main.rs"
