[package]
name = "vg-control-plane"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-tracing-opentelemetry = "0.29"
base64ct = { version = "1", features = ["alloc"] }
bytes = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
gateway-api = "0.16"
getset = { workspace = true }
gtmpl = { version = "0.7", features = ["gtmpl_dynamic_template"] }
gtmpl_derive = "0.5"
gtmpl_value = "0.5"
ipnet = { workspace = true }
itertools = { workspace = true }
k8s-openapi = { workspace = true, features = ["v1_32"] }
kube = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
vg-api = { path = "../api" }
vg-core = { path = "../core" }
vg-build = { path = "../build" }
vg-macros = { path = "../macros" }
problemdetails = { workspace = true, features = ["axum"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sprig = "0.3"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["full"] }
tracing = { workspace = true }
kube-leader-election = { git = "https://github.com/daniel-white/kube-leader-election.git", branch = "feat/change-result-type" }
strum = { workspace = true }
axum-health = "0.1"
typed-builder = { workspace = true }
