[package]
name = "kubera_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
futures = "0.3"
kubera_core = { path = "../core" }
gateway-api = { version = "0.15.0" }
kube = { version = "0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["v1_32"] }
merge = { version = "0.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = { version = "2", features = ["std"] }
humantime-serde = { version = "1" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7" }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
kube = { version = "0.99.0", features = ["derive"] }
gateway-api = { version = "0.15.0" }
k8s-openapi = { version = "0.24.0", features = ["v1_32"] }
schemars = { version = "0.8" }
serde_json = "1.0"
serde_yaml = "0.9"

[[bin]]
name = "kubera_controller"
path = "src/main.rs"
