[package]
name = "kubera_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
derive_builder = "0.20"
derive-getters = "0.5"
futures = "0.3"
futures-signals = "0.3"
gateway-api = "0.15"
humantime-serde = "1.0"
k8s-openapi = { version = "0.24", features = ["v1_32"] }
kube = { version = "0.99", features = ["runtime", "derive"] }
kubera_core = { path = "../core" }
log = "0.4"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
structured-logger = { version = "1" }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"



[[bin]]
name = "kubera_controller"
path = "src/main.rs"
