[package]
name = "kubera_controlplane"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
backtrace-on-stack-overflow = "0.3"
clap = { workspace = true }
derive_builder = { workspace = true }
flexi_logger = { workspace = true }
futures = { workspace = true }
gateway-api = "0.15"
getset = { workspace = true }
itertools = "0.14"
k8s-openapi = { version = "0.24", features = ["v1_32"] }
kube = { version = "0.99", features = ["runtime", "derive"] }
kubera_core = { path = "../core" }
multimap = "0.10"
romap = "0.4"
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[[bin]]
name = "kubera_controlplane"
path = "src/main.rs"
