[package]
name = "kubera_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
derive_builder = { workspace = true }
flexi_logger = { workspace = true }
getset = { workspace = true }
http = { workspace = true }
notify = "8"
schemars = { workspace = true }
serde = { workspace = true }
serde_valid = { version = "1", features = ["yaml"] }
serde_yaml = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
unicase = { workspace = true }


[lib]
name = "kubera_core"
path = "src/lib.rs"