[package]
name = "vg-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "vg_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
atomic_refcell = "0.1.13"
assertables = { workspace = true }
backtrace-on-stack-overflow = "0.3"
console-subscriber = "0.4"
flexi_logger = { workspace = true }
getset = { workspace = true }
http = { workspace = true }
ipnet = { workspace = true }
itertools = { workspace = true }
notify = "8"
opentelemetry = { workspace = true }
opentelemetry_sdk = { version = "0.30", features = ["metrics", "trace", "logs"] }
opentelemetry-appender-log = "0.30"
opentelemetry-otlp = { version = "0.30", features = ["tonic", "metrics", "trace", "logs", "grpc-tonic"] }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
rustls = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_valid = { version = "1", features = ["yaml"] }
serde_yaml = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-shutdown = "0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
tracing-opentelemetry = "0.31"
unicase = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
