[package]
name = "kubera_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = "1"
enumflags2 = { workspace = true }
clap = { workspace = true }
eventsource-client = { version = "0.15" }
futures = { workspace = true }
getset = { workspace = true }
http = { workspace = true }
http-constant = { workspace = true }
ipnet = { workspace = true }
itertools = { workspace = true }
kubera_core = { path = "../core" }
kubera_macros = { path = "../macros" }
once_cell = "1"
pingora = { version = "0.5", features = ["pingora-proxy", "pingora-load-balancing", "lb", "rustls"] }
problemdetails = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2"
prometheus = "0.14"
rand = "0.9"
rand_chacha = "0.9"
reqwest = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
trusted-proxies = "0.3"
typed-builder = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }
wiremock = { workspace = true }

[[bin]]
name = "kubera_gateway"
path = "src/main.rs"
