[package]
name = "vg-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
enumflags2 = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
eventsource-client = { version = "0.15" }
futures = { workspace = true }
getset = { workspace = true }
http = { workspace = true }
http-constant = { workspace = true }
ipnet = { workspace = true }
itertools = { workspace = true }
vg-core = { path = "../core" }
vg-macros = { path = "../macros" }
once_cell = "1"
opentelemetry = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-http = { version = "0.30" }
opentelemetry-appender-tracing = { workspace = true }
pingora = { version = "0.6", features = ["default", "pingora-proxy", "lb", "rustls"] }
tracing-opentelemetry = "0.31"
problemdetails = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
rand = "0.9"
rand_chacha = "0.9"
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-tracing = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true }
trusted-proxies = "0.3"
typed-builder = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }
wiremock = { workspace = true }
